--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "nodemon": "^2.0.2"
   },
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
+    "server":"nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
